tests/snapshots/ngl_all__ngl_15_selfsame_twin.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
Beam: 628
BeginPage: 25
EndPage: 25
MusicChar: 18
SetWidths: 1
Staff: 100
TOTAL: 797

=== STAVES ===
y=81.7 x=[157.0..763.0] lines=5 spacing=4.50
y=167.1 x=[157.0..763.0] lines=5 spacing=4.50
y=421.2 x=[157.0..763.0] lines=5 spacing=4.50
y=506.9 x=[157.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50
y=81.7 x=[125.0..763.0] lines=5 spacing=4.50
y=167.1 x=[125.0..763.0] lines=5 spacing=4.50
y=421.2 x=[125.0..763.0] lines=5 spacing=4.50
y=506.9 x=[125.0..763.0] lines=5 spacing=4.50

=== BARLINES: 0 total ===

=== BEAMS: 628 total ===

=== STEMS: 0 total ===

=== GLYPHS ===
Smufl(57424): 4
Smufl(57442): 1
Smufl(57449): 1
Smufl(57476): 12
