tests/snapshots/ngl_all__ngl_16_esmerelda.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 834
Beam: 683
BeginPage: 24
EndPage: 24
LedgerLine: 770
MusicChar: 3825
NoteStem: 2347
SetMusicSize: 144
SetWidths: 1
Slur: 240
Staff: 144
TextString: 511
TOTAL: 9547

=== STAVES ===
y=77.1 x=[169.0..763.0] lines=5 spacing=4.50
y=163.1 x=[169.0..763.0] lines=5 spacing=4.50
y=249.1 x=[169.0..763.0] lines=5 spacing=4.50
y=336.1 x=[169.0..763.0] lines=5 spacing=4.50
y=422.1 x=[169.0..763.0] lines=5 spacing=4.50
y=508.1 x=[169.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50
y=77.1 x=[118.0..763.0] lines=5 spacing=4.50
y=163.1 x=[118.0..763.0] lines=5 spacing=4.50
y=249.1 x=[118.0..763.0] lines=5 spacing=4.50
y=336.1 x=[118.0..763.0] lines=5 spacing=4.50
y=422.1 x=[118.0..763.0] lines=5 spacing=4.50
y=508.1 x=[118.0..763.0] lines=5 spacing=4.50

=== BARLINES: 834 total ===

=== BEAMS: 683 total ===

=== STEMS: 2347 total ===

=== SLURS: 240 total ===

=== GLYPHS ===
Smufl(57424): 122
Smufl(57442): 36
Smufl(57475): 6
Smufl(57476): 18
Smufl(57479): 6
Smufl(57480): 6
Smufl(57506): 1
Smufl(57507): 461
Smufl(57508): 1996
Smufl(57813): 1
Smufl(57831): 694
Smufl(57920): 31
Smufl(57921): 3
Smufl(57953): 3
Smufl(57954): 112
Smufl(58560): 2
Smufl(58595): 171
Smufl(58597): 12
Smufl(58598): 22
Smufl(58900): 122
