tests/snapshots/ngl_all__ngl_17_capital_regiment_march.snap
---
source: tests/ngl_all.rs
assertion_line: 426
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 765
Beam: 290
BeginPage: 14
EndPage: 14
LedgerLine: 361
Line: 78
MusicChar: 3617
NoteStem: 2119
SetMusicSize: 126
SetWidths: 1
Slur: 276
Staff: 126
TOTAL: 7787

=== STAVES ===
y=78.4 x=[127.0..746.0] lines=5 spacing=4.00
y=465.1 x=[127.0..746.0] lines=5 spacing=4.00
y=520.9 x=[127.0..746.0] lines=5 spacing=4.00
y=133.4 x=[127.0..746.0] lines=5 spacing=4.00
y=189.1 x=[127.0..746.0] lines=5 spacing=4.00
y=244.1 x=[127.0..746.0] lines=5 spacing=4.00
y=300.1 x=[127.0..746.0] lines=5 spacing=4.00
y=355.1 x=[127.0..746.0] lines=5 spacing=4.00
y=410.1 x=[127.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00
y=78.4 x=[94.0..746.0] lines=5 spacing=4.00
y=465.1 x=[94.0..746.0] lines=5 spacing=4.00
y=520.9 x=[94.0..746.0] lines=5 spacing=4.00
y=133.4 x=[94.0..746.0] lines=5 spacing=4.00
y=189.1 x=[94.0..746.0] lines=5 spacing=4.00
y=244.1 x=[94.0..746.0] lines=5 spacing=4.00
y=300.1 x=[94.0..746.0] lines=5 spacing=4.00
y=355.1 x=[94.0..746.0] lines=5 spacing=4.00
y=410.1 x=[94.0..746.0] lines=5 spacing=4.00

=== BARLINES: 765 total ===

=== BEAMS: 290 total ===

=== STEMS: 2119 total ===

=== SLURS: 276 total ===

=== GLYPHS ===
Smufl(57424): 70
Smufl(57442): 56
Smufl(57474): 18
Smufl(57506): 55
Smufl(57507): 183
Smufl(57508): 1936
Smufl(57831): 166
Smufl(57920): 44
Smufl(57921): 74
Smufl(57952): 108
Smufl(57953): 25
Smufl(57954): 123
Smufl(58595): 70
Smufl(58596): 101
Smufl(58597): 425
Smufl(58658): 56
Smufl(58668): 19
Smufl(58669): 43
Smufl(58671): 29
Smufl(59523): 16
