tests/snapshots/ngl_all__ngl_tc_02.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 2
Beam: 10
BeginPage: 1
Brace: 1
ConnectorLine: 1
EndPage: 1
LedgerLine: 3
MusicChar: 56
NoteStem: 29
SetMusicSize: 2
SetWidths: 1
Staff: 2
TOTAL: 109

=== STAVES ===
y=60.1 x=[36.0..330.0] lines=5 spacing=4.00
y=98.6 x=[36.0..330.0] lines=5 spacing=4.00

=== BARLINES: 2 total ===

=== BEAMS: 10 total ===

=== STEMS: 29 total ===

=== GLYPHS ===
Smufl(57424): 1
Smufl(57442): 1
Smufl(57508): 29
Smufl(57831): 6
Smufl(57920): 5
Smufl(57921): 5
Smufl(58598): 9
