tests/snapshots/ngl_all__ngl_tc_04.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 5
Beam: 1
BeginPage: 1
EndPage: 1
MusicChar: 27
NoteStem: 18
SetMusicSize: 1
SetWidths: 1
Staff: 1
TextString: 26
TOTAL: 82

=== STAVES ===
y=60.1 x=[36.0..567.0] lines=5 spacing=4.00

=== BARLINES: 5 total ===

=== BEAMS: 1 total ===

=== STEMS: 18 total ===

=== GLYPHS ===
Smufl(57424): 1
Smufl(57507): 1
Smufl(57508): 17
Smufl(57831): 3
Smufl(57920): 1
Smufl(57921): 2
Smufl(57954): 2
