tests/snapshots/ngl_all__ngl_tc_05.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 8
Beam: 36
BeginPage: 1
Brace: 1
ConnectorLine: 1
EndPage: 1
LedgerLine: 3
MusicChar: 117
NoteStem: 99
SetMusicSize: 3
SetWidths: 1
Slur: 1
Staff: 3
TextString: 2
TOTAL: 277

=== STAVES ===
y=123.3 x=[36.0..567.0] lines=5 spacing=4.00
y=158.7 x=[36.0..567.0] lines=5 spacing=4.00
y=71.4 x=[36.0..567.0] lines=5 spacing=4.00

=== BARLINES: 8 total ===

=== BEAMS: 36 total ===

=== STEMS: 99 total ===

=== SLURS: 1 total ===

=== GLYPHS ===
Smufl(57424): 2
Smufl(57442): 1
Smufl(57507): 20
Smufl(57508): 84
Smufl(57920): 1
Smufl(57952): 4
Smufl(57953): 2
Smufl(57954): 2
Smufl(58598): 1
