tests/snapshots/ngl_all__ngl_tc_old_alpherqt_16.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 33
Beam: 66
BeginPage: 2
Bracket: 6
ConnectorLine: 6
EndPage: 2
LedgerLine: 44
MusicChar: 707
NoteStem: 277
SetMusicSize: 24
SetWidths: 1
Slur: 60
Staff: 24
TextString: 22
TOTAL: 1274

=== STAVES ===
y=104.0 x=[81.0..540.0] lines=5 spacing=5.00
y=154.0 x=[81.0..540.0] lines=5 spacing=5.00
y=209.0 x=[81.0..540.0] lines=5 spacing=5.00
y=256.0 x=[81.0..540.0] lines=5 spacing=5.00
y=336.0 x=[36.0..540.0] lines=5 spacing=5.00
y=386.0 x=[36.0..540.0] lines=5 spacing=5.00
y=441.0 x=[36.0..540.0] lines=5 spacing=5.00
y=488.0 x=[36.0..540.0] lines=5 spacing=5.00
y=558.5 x=[36.0..540.0] lines=5 spacing=5.00
y=608.5 x=[36.0..540.0] lines=5 spacing=5.00
y=663.5 x=[36.0..540.0] lines=5 spacing=5.00
y=710.5 x=[36.0..540.0] lines=5 spacing=5.00
y=70.0 x=[36.0..540.0] lines=5 spacing=5.00
y=120.0 x=[36.0..540.0] lines=5 spacing=5.00
y=175.0 x=[36.0..540.0] lines=5 spacing=5.00
y=222.0 x=[36.0..540.0] lines=5 spacing=5.00
y=313.5 x=[36.0..540.0] lines=5 spacing=5.00
y=363.5 x=[36.0..540.0] lines=5 spacing=5.00
y=418.5 x=[36.0..540.0] lines=5 spacing=5.00
y=465.5 x=[36.0..540.0] lines=5 spacing=5.00
y=557.0 x=[36.0..540.0] lines=5 spacing=5.00
y=607.0 x=[36.0..540.0] lines=5 spacing=5.00
y=662.0 x=[36.0..540.0] lines=5 spacing=5.00
y=709.0 x=[36.0..540.0] lines=5 spacing=5.00

=== BARLINES: 33 total ===

=== BEAMS: 66 total ===

=== STEMS: 277 total ===

=== SLURS: 60 total ===

=== GLYPHS ===
Smufl(57424): 12
Smufl(57436): 6
Smufl(57442): 6
Smufl(57473): 8
Smufl(57475): 44
Smufl(57476): 12
Smufl(57477): 32
Smufl(57478): 8
Smufl(57480): 80
Smufl(57507): 13
Smufl(57508): 276
Smufl(57831): 47
Smufl(57920): 35
Smufl(57921): 4
Smufl(57952): 24
Smufl(57953): 8
Smufl(57954): 42
Smufl(58533): 9
Smufl(58595): 15
Smufl(58597): 8
Smufl(58598): 17
Smufl(58599): 1
